force-app/main/default/objects/Repair_Item__c/Repair_Item__c.object-meta.xml
<CustomObject>
    <label>정비 항목</label>
    <nameField>
        <label>정비 항목 이름</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>정비 항목</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>