force-app/main/default/objects/Repair_Item__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>사례</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>정비 항목</relationshipLabel>
    <relationshipName>Case</relationshipName>
    <type>Lookup</type>
</CustomField>