force-app/main/default/objects/Repair_Item__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>상세 내용</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>