force-app/main/default/objects/Repair_Item__c/fields/Parts__c.field-meta.xml
<CustomField>
    <fullName>Parts__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>부품</label>
    <referenceTo>Parts__c</referenceTo>
    <relationshipLabel>정비 항목</relationshipLabel>
    <relationshipName>Parts</relationshipName>
    <type>Lookup</type>
</CustomField>