force-app/main/default/objects/Repair_Item__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <label>가격</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>