force-app/main/default/objects/Repair_Item__c/fields/Repair_Shop__c.field-meta.xml
<CustomField>
    <fullName>Repair_Shop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>정비소</label>
    <referenceTo>Repair_Shop__c</referenceTo>
    <relationshipLabel>정비 항목</relationshipLabel>
    <relationshipName>Repair_Shops</relationshipName>
    <type>Lookup</type>
</CustomField>